# robot-planning

./: .gitignore  Dockerfile  Doxyfile  Doxyfile_local  README.md  git-push.sh  ros_entrypoint.sh  start.sh  startup.sh
.github/workflows/: doxygen-gh-pages.yml
autorun/: start_ros2.sh
controller/: CMakeLists.txt  package.xml
controller/launch/: controller.launch.py
controller/src/: a_star.cpp  controller.cpp  data.cpp  declarations.cpp  dubins.cpp  teleop.cpp
doc/html/: _publisher_8cpp.html  _publisher_8hpp.html  _publisher_8hpp.js  _publisher_8hpp_source.html  _replier_8cpp.html  _replier_8cpp.js  _replier_8hpp.html  _replier_8hpp.js  _replier_8hpp_source.html  annotated.html  annotated_dup.js  bringup_8launch_8py.html  bringup_8launch_8py.js  class_c_m_d_publisher-members.html  class_c_m_d_publisher.html  class_c_m_d_publisher.js  class_common_1_1_publisher-members.html  class_common_1_1_publisher.html  class_common_1_1_publisher.js  class_common_1_1_replier-members.html  class_common_1_1_replier.html  class_common_1_1_replier.js  class_common_1_1single__thread-members.html  class_common_1_1single__thread.html  class_common_1_1single__thread.js  class_cone-members.html  class_cone.html  class_cone.js  class_hardware_global_interface-members.html  class_hardware_global_interface.html  class_hardware_global_interface.js  class_person_item-members.html  class_person_item.html  class_person_item.js  class_shelfino_h_w_node-members.html  class_shelfino_h_w_node.html  class_shelfino_h_w_node.js  class_z_m_q_common_1_1_requester_simple-members.html  class_z_m_q_common_1_1_requester_simple.html  class_z_m_q_common_1_1_requester_simple.js  (+404 more)
doc/latex/: _publisher_8cpp.tex  _publisher_8hpp.tex  _publisher_8hpp_source.tex  _replier_8cpp.tex  _replier_8hpp.tex  _replier_8hpp_source.tex  annotated.tex  bringup_8launch_8py.tex  class_c_m_d_publisher.eps  class_c_m_d_publisher.tex  class_common_1_1_publisher.tex  class_common_1_1_replier.eps  class_common_1_1_replier.tex  class_common_1_1single__thread.eps  class_common_1_1single__thread.tex  class_cone.tex  class_hardware_global_interface.tex  class_person_item.tex  class_shelfino_h_w_node.eps  class_shelfino_h_w_node.tex  class_z_m_q_common_1_1_requester_simple.tex  class_z_m_q_common_1_1_subscriber.eps  class_z_m_q_common_1_1_subscriber.tex  classnlohmann_1_1basic__json.tex  classnlohmann_1_1basic__json_1_1iter__impl.eps  classnlohmann_1_1basic__json_1_1iter__impl.tex  classnlohmann_1_1basic__json_1_1iteration__proxy.tex  classnlohmann_1_1basic__json_1_1iteration__proxy_1_1iteration__proxy__internal.tex  classnlohmann_1_1basic__json_1_1json__pointer.tex  classnlohmann_1_1basic__json_1_1json__reverse__iterator.eps  classnlohmann_1_1basic__json_1_1json__reverse__iterator.tex  classnlohmann_1_1basic__json_1_1lexer.tex  classnlohmann_1_1basic__json_1_1parser.tex  classnlohmann_1_1basic__json_1_1primitive__iterator__t.tex  classzmq_1_1context__t.tex  classzmq_1_1error__t.eps  classzmq_1_1error__t.tex  classzmq_1_1message__t.tex  classzmq_1_1monitor__t.tex  classzmq_1_1socket__t.tex  (+145 more)
docker/: Dockerfile  ros_entrypoint.sh  start.sh
docker/remote_control/: CMakeLists.txt  package.xml
docker/remote_control/src/: remote_control.cpp
docker/ros2_interface/: CMakeLists.txt  package.xml
docker/shelfino_gazebo/: CMakeLists.txt
docker/shelfino_interfaces/: CMakeLists.txt  package.xml
docker/shelfino_navigation/: CMakeLists.txt
docker/shelfino_node/: CMakeLists.txt
dubins_planner/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
dubins_planner/include/dubins_planner/: dubins_trajectory.h
dubins_planner/include/utils/: utils.h
dubins_planner/src/: config.cpp  dubins-trajectory-dbg.cpp  dubins-trajectory.cpp  dubins-trajectory.h  dubins_planner.cpp  dubins_trajectory.cpp  dubins_trajectory_config.cpp  obstacles.cpp  path_planner.cpp  test-main.cpp  test.cpp  test.h  trajectory-publisher.cpp  utils.cpp
dubins_planner/src/install/: local_setup.sh  setup.sh
dubins_planner/src/log/: latest_build
get_positions/src/: get_positions.cpp
launch/: planner.launch  planner.launch copy.py  planner.launch.py  sim.launch.py
mapping/: CMakeLists.txt  package.xml
mapping/src/: boost_geo_trial.cpp
obstacles/: CMakeLists.txt  package.xml
obstacles/src/: a.out  boost_geo.cpp  clip1_test.cpp  clipper_test.cpp  inflate_obstacles.cpp  inflate_obstacles_node.cpp  main  test.cpp  test_client.cpp  test_service.cpp
obstacles_msgs/: CMakeLists.txt  package.xml
obstacles_msgs/msg/: WaypointsMsg.msg
path_planner/: CMakeLists.txt  package.xml
path_planner/src/: path_planner.cpp
planner/: CMakeLists.txt  package.xml
planner/config/: nav2_params.yaml  navigation_bt.xml  navigation_params.yaml  shelfino1.yaml
planner/rviz/: shelfino1_nav.rviz
planner/src/: config.cpp  dubins_planner.cpp  planner.cpp  r_map.cpp  roadmap.cpp  roadmap_node.cpp  utils.cpp
remote_control/: CMakeLists.txt  package.xml
remote_control/src/: remote_control.cpp
roadmap/: CMakeLists.txt  package.xml
roadmap/include/roadmap/: r_map.h
roadmap/src/: r_map.cpp  roadmap.cpp
ros2_interface/: CMakeLists.txt  package.xml
ros2_interface/include/: hardwareglobalinterface.h
ros2_interface/src/: ShelfinoLidarPublisher.cpp  shelfino_hw_publisher.cpp  shelfino_lidar_publisher.cpp
send_borders/src/: send_borders.cpp
send_gates/src/: send_gates.cpp
send_obstacles/: CMakeLists.txt  package.xml
send_obstacles/src/: send_obstacles.cpp
service_interface/: CMakeLists.txt  package.xml
shelfino_description/launch/: robot_state_publisher.launch.py
shelfino_gazebo/: CMakeLists.txt
shelfino_gazebo/launch/: multi_shelfino.launch.py  multi_shelfino_turtle.launch.py  shelfino.launch.py  shelfino_empty.launch.py  shelfino_hexagon.launch.py  shelfino_povo.launch.py  shelfino_turtle.launch.py
shelfino_gazebo/rviz/: shelfino.rviz
shelfino_gazebo/worlds/: Povo2_floor1.world  empty.world
shelfino_node/: CMakeLists.txt  package.xml
test_library/: CMakeLists.txt  package.xml
test_node/: CMakeLists.txt  package.xml
test_node/src/: test-node.cpp
(+233 files in other folders)
